prusti-tests/tests/verify/ui/predicates/dont-call.stderr
error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
 --> $DIR/dont-call.rs:9:14
  |
9 |     let _x = pred_id(true);
  |              ^^^^^^^
  |
note: this is a specification-only predicate function
 --> $DIR/dont-call.rs:4:1
  |
4 | / fn pred_id(x: bool) -> bool {
5 | |     x
6 | | }
  | |_^

error: [Prusti: invalid specification] using predicate from non-specification code is not allowed
  --> $DIR/dont-call.rs:16:17
   |
16 |     illegal_ref(pred_id);
   |                 ^^^^^^^
   |
note: this is a specification-only predicate function
  --> $DIR/dont-call.rs:4:1
   |
4  | / fn pred_id(x: bool) -> bool {
5  | |     x
6  | | }
   | |_^

error: aborting due to 2 previous errors

